tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: example
spec:
  selector:
    matchLabels:
      app: tomcat
  replicas: 4
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:8-jre8-openjdk
        resources:
          cpu: 250m
          memory: 256Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tomcat-users
          mountPath: /usr/local/tomcat/conf
        - name: tomcat-storage
          mountPath: /usr/local/tomcat/webapps
      volumes:
      - name: tomcat-storage
        persistentVolumeClaim:
          claimName: tomcat-pvc
