ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-influxdb-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: tomcat.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat-influxdb-service
            port:
              name: tomcat
  - host: influxdb.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat-influxdb-service
            port:
              name: influxdb
